--- a/src/css/App.css
+++ b/src/css/App.css
@@ -2,3 +2,14 @@
   text-decoration: none;
   color: #3a1212;
 }
+
+body{
+  margin: 0;
+  padding: 0;
+  border: 0;
+  outline: 0;
+  list-style: none;
+  text-decoration: none;
+  box-sizing: border-box;
+
+}
